# Logger

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  LangulusUtilities.cmake  Logger.cpp  Logger.hpp  Logger.inl  LoggerSystem.cpp  LoggerSystem.hpp  LoggerSystem.inl  README.md
.github/workflows/: automerge.yml  ci.yml  dispatch.yml
include/: Langulus.Logger.hpp  LangulusLogger.hpp  PCFW.Logger.hpp
include/Logger/: Logger.hpp
source/: HTML.cpp  Logger.cpp  Logger.hpp  Logger.inl  TXT.cpp
test/: CMakeLists.txt  Main.cpp  Main.hpp  TestLogger.cpp
tests/: Main.cpp
